# Aether

./: .gitignore  LICENSE  README.md  pyproject.toml
AetherExtension/: content.js  manifest.json
hyper_aether/: .gitignore  README.md  extractor.py  gemini_implementation.py  main.py  mem_kernel2_0.py  memory_kernel.py  pyproject.toml  try.sh
hyper_aether.egg-info/: top_level.txt
hyper_aether/AetherExtension/: content.js
hyper_aether/hyper_aether.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hyper_aether/locomo_evals/: job.sh  judge_locomo_vllm.py  run_locomo_pipeline.py
hyper_aether/locomo_evals/aether_baseline/: aether_add.py  aether_search.py  memory_kernel.py  prompts.py  run_all_with_vllm.sh
hyper_aether/locomo_evals/aether_baseline/aether_db/: Andrew_5.pkl  Audrey_5.pkl  Caroline_0.pkl  Deborah_7.pkl  Gina_1.pkl  James_6.pkl  Joanna_3.pkl  John_2.pkl  John_4.pkl  Jolene_7.pkl  Jon_1.pkl  Nate_3.pkl  Sam_8.pkl  Tim_4.pkl
hyper_aether/locomo_evals/aether_baseline/aether_db_v2/: Andrew_5.pkl  Calvin_9.pkl  John_2.pkl
hyper_aether/locomo_evals/mem0_baseline/: config.py  details.md  eval.py  mem0_add.py  mem0_search.py  run-mem0.sh  run.py  run_all_with_vllm.sh
hyper_aether/locomo_evals/mem0_baseline/mem0_db/a09058dd-4159-4897-9dd3-52124313f5b0/: index_metadata.pickle
hyper_aether/locomo_evals/rag_baseline/: README.md  chunk_index.py  config.py  eval.py  metrics.py  prompts.py  rag_search.py  run_all_with_vllm.sh  run_all_with_vllm_v1.sh
hyper_aether/locomo_evals/results/: compare_baselines.py  gem_results_first5.json  locomo_results.json
locomo_evals/: bar_chart.py  judge_locomo_vllm.py  latency.py  llm_as_a_judge.py  plot_baseline_latency_quality.py  run_locomo_pipeline.py  run_locomo_pipeline_gemini.py  scored_locomo_results.json
locomo_evals/aether_baseline/: aether_add.py  aether_search.py  config.py  eval.py  extractor.py  generate_scores.py  memory_kernel.py  metrics.py  prompts.py  run.py  run_locomo_slurm.sh
locomo_evals/aether_baseline/aether_db/: Andrew_5.pkl  Audrey_5.pkl  Calvin_9.pkl  Caroline_0.pkl  Dave_9.pkl  Evan_8.pkl  Joanna_3.pkl  John_2.pkl  John_4.pkl  John_6.pkl  Jolene_7.pkl  Jon_1.pkl  Maria_2.pkl  Melanie_0.pkl  Nate_3.pkl  Sam_8.pkl  Tim_4.pkl
locomo_evals/aether_baseline/aether_db_v2/: Audrey_5.pkl  Caroline_0.pkl  Dave_9.pkl  Deborah_7.pkl  Evan_8.pkl  Gina_1.pkl  James_6.pkl  Joanna_3.pkl  John_4.pkl  John_6.pkl  Jolene_7.pkl  Jon_1.pkl  Maria_2.pkl  Melanie_0.pkl  Nate_3.pkl  Sam_8.pkl  Tim_4.pkl
locomo_evals/aether_baseline/results/: add_latency_summary.json  aether_search_results_top30.latency_summary.json  evaluation_metrics.json
locomo_evals/aether_baseline/results_v2/: evaluation_metrics.json
locomo_evals/mem0_baseline/: config.py  eval.py  generate_scores.py  mem0_add.py  mem0_search.py  metrics.py  prompts.py  run_locomo_slurm.sh
locomo_evals/mem0_baseline/results/: add_latency_summary.json  evaluation_metrics.json  mem0_search_results_top30.latency_summary.json
locomo_evals/mem0g_baseline/: __init__.py  config.py  mem0_add.py  mem0_search.py  run.py  run_locomo_slurm.sh  vllm_tool_args_patch.py
locomo_evals/mem0g_baseline/results/: add_latency_summary.json  evaluation_metrics.json  mem0g_search_results_top30.latency_summary.json
locomo_evals/rag_baseline/: chunk_index.py  config.py  generate_scores.py  rag_search.py  run.py  run_locomo_slurm.sh
locomo_evals/rag_baseline/results/: add_latency_summary.json  evaluation_metrics.json  rag_search_results_chunksize512_top2.latency_summary.json
locomo_evals/results/: comparison.json  comparison.md  comparison_v2.md  locomo_results_gemini.json
locomo_evals/results/baseline_comparison/: baseline_comparison_report.html  comparison.md  latencies.csv  scores_by_category_wide.csv  scores_overall.csv
locomo_evals/results/plots/: baseline_latency_quality_summary.csv
src/: extractor.py  main.py  server.py
src/Aether.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
