[project]
name = "hyper-aether"
version = "0.1.0"
description = "A long term memory layer for multi agent systems using hypergraphs and large language models."
authors = [
    { name = "Shrey Kohli", email = "kohlishr@umich.edu"},
    { name = "Vansh Nagpal", email = "vnagpal@umich.edu"},
    { name = "Pranav Gupta", email = "gpranav@umich.edu"},
    { name = "Anshul Batish", email = "abatish@umich.edu"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.4",
    "numpy>=1.26.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "xgi>=0.10.1",
]

[project.optional-dependencies]
vllm = ["vllm>=0.8.0"]
mem0-baseline = [
    "mem0ai>=0.1.0",
    "chromadb>=0.5.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "nltk>=3.8.0",
    "pandas>=2.0.0",
    "tqdm>=4.60.0",
]
